<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/modalBottomSheetContainer"
        android:background="@drawable/dialog_shape"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:padding="15dp">

        <ImageView
            android:maxHeight="30dp"
            android:maxWidth="30dp"
            android:id="@+id/imageView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/success"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/bottom_sheet_title"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/transaction_sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/bottom_sheet_content"
            android:textColor="@color/grey"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:text="@string/bottom_sheet_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <Button
            android:id="@+id/button_tap"
            android:text="@string/ok"
            android:textSize="12sp"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/zenith_button_style"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>