<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:paddingBottom="15dp"
        android:id="@+id/view_card_front_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintDimensionRatio="490:310"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:background="@drawable/card_bg">
<!--        @drawable/rounded_rectangle_gradient-->
        <ImageView
            android:id="@+id/view_card_front_thales_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="16dp"
            android:src="@drawable/zenith_logo"
            android:contentDescription="@string/view_card_front_thales_logo_desc" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/view_card_front_pan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/effra_regular"
            tools:text="**** **** **** 6808" />
        <ImageView
            android:paddingStart="15dp"
            android:layout_margin="16dp"
            android:gravity="end"
            android:src="@drawable/chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/chip" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp"
            >

            <LinearLayout
                android:layout_marginBottom="12dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/effra_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_card_front_valid_thru"
                    android:textColor="@color/white" />

                <TextView
                    android:fontFamily="@font/effra_medium"
                    android:id="@+id/view_card_front_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="06/22" />

            </LinearLayout>

            <TextView
                android:id="@+id/view_card_front_type"
                android:layout_width="wrap_content"
                android:fontFamily="@font/effra_medium"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Visa"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/isDefaultIcon"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/is_default" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/view_card_front_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>